--- a/src/main/resources/assets/wearables/lang/en_US.lang
+++ b/src/main/resources/assets/wearables/lang/en_US.lang
@@ -32,4 +32,4 @@ component.plain_shirt.name=Plain Shirt
 component.glasses_1.name=Generic Glasses #1
 component.top_hat.name=Top Hat
 component.retro_3d_glasses.name=Retro 3D Glasses
-component.harry_potter_glasses.name=Round Glasses
+component.round_glasses.name=Round Glasses
