--- a/src/main/resources/assets/wearables/lang/en_US.lang
+++ b/src/main/resources/assets/wearables/lang/en_US.lang
@@ -25,6 +25,8 @@ tile.mannequin_head_stand.name=Mannequin Head Stand
 # Labels
 
 label.wearable_components.name=Components:
+label.wearable_customization.name=Wearable Customization
+label.wearable_height.name=Height
 
 # Components
 
