--- a/src/main/resources/assets/wearables/lang/en_US.lang
+++ b/src/main/resources/assets/wearables/lang/en_US.lang
@@ -37,3 +37,5 @@ component.top_hat.name=Top Hat
 component.retro_3d_glasses.name=Retro 3D Glasses
 component.round_glasses.name=Round Glasses
 component.modoff_cape.name=ModOff Cape
+component.bow_tie.name=Bow Tie
+component.tie.name=Tie
