Another reason to have ASM... Flippers!

--- a/src/main/resources/assets/wearables/lang/en_US.lang
+++ b/src/main/resources/assets/wearables/lang/en_US.lang
@@ -40,3 +40,4 @@ component.round_glasses.name=Round Glasses
 component.modoff_cape.name=ModOff Cape
 component.bow_tie.name=Bow Tie
 component.tie.name=Tie
+component.flippers.name=Flippers
