--- a/src/main/resources/assets/wearables/lang/en_US.lang
+++ b/src/main/resources/assets/wearables/lang/en_US.lang
@@ -41,3 +41,4 @@ component.modoff_cape.name=ModOff Cape
 component.bow_tie.name=Bow Tie
 component.tie.name=Tie
 component.flippers.name=Flippers
+component.jetpack.name=Jetpack
