--- a/src/main/resources/assets/wearables/lang/en_US.lang
+++ b/src/main/resources/assets/wearables/lang/en_US.lang
@@ -31,8 +31,6 @@ label.wearable_height.name=Height
 
 # Components
 
-component.hat.name=Hat
-component.plain_shirt.name=Plain Shirt
 component.glasses_1.name=Generic Glasses #1
 component.top_hat.name=Top Hat
 component.retro_3d_glasses.name=Retro 3D Glasses
@@ -42,3 +40,13 @@ component.bow_tie.name=Bow Tie
 component.tie.name=Tie
 component.flippers.name=Flippers
 component.jetpack.name=Jetpack
+component.shoes_generic_1.name=Generic Shoes #1
+component.pants_generic_1.name=Generic Pants #1
+component.helmet_generic_1.name=Generic Helmet #1
+component.helmet_generic_2.name=Generic Helmet #2
+component.shirt_generic_1.name=Generic Shirt #1
+component.shirt_generic_2.name=Generic Shirt #2
+component.t_shirt_generic_1.name=Generic T-Shirt #1
+component.t_shirt_generic_2.name=Generic T-Shirt #2
+component.dragon_horns.name=Dragon Horns
+component.wings.name=Wings
