Night vision goggles

--- a/src/main/resources/assets/wearables/lang/en_US.lang
+++ b/src/main/resources/assets/wearables/lang/en_US.lang
@@ -50,3 +50,4 @@ component.t_shirt_generic_1.name=Generic T-Shirt #1
 component.t_shirt_generic_2.name=Generic T-Shirt #2
 component.dragon_horns.name=Dragon Horns
 component.wings.name=Wings
+component.night_vision_goggles.name=Night Vision Goggles
