--- a/src/main/resources/assets/wearables/lang/en_US.lang
+++ b/src/main/resources/assets/wearables/lang/en_US.lang
@@ -51,3 +51,10 @@ component.t_shirt_generic_2.name=Generic T-Shirt #2
 component.dragon_horns.name=Dragon Horns
 component.wings.name=Wings
 component.night_vision_goggles.name=Night Vision Goggles
+
+# Tooltips
+
+tooltip.wearable.jetpack.name=Allows powered flight
+tooltip.wearable.wings.name=Allows gliding flight
+tooltip.wearable.flippers.name=Allows faster swimming
+tooltip.wearable.night_vision_goggles.name=Improves vision at night
